--- a/Landingpage/style.css
+++ b/Landingpage/style.css
@@ -457,3 +457,25 @@ ul {
         margin-bottom: 25px;
     }
 }
+
+@media (max-width:360px) {
+    .footer-lists{
+        display: none;
+    }
+    .container{
+        text-align: center;
+        height: 30px;
+    }
+    #nav{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    #nav img{
+        width: 40px;
+        height: 30px;
+    }
+    .nav-right .btn{
+        display: none;
+    }
+}
