--- a/style.css
+++ b/style.css
@@ -90,6 +90,8 @@ section {
    display: inline-block;
 }
 
+/***** header section *****/
+
 .header {
    position: sticky;
    top: 0;
@@ -190,39 +192,7 @@ section {
    display: none;
 }
 
-.services .box-container {
-   display: grid;
-   grid-template-columns: repeat(auto-fit, 30rem);
-   gap: 2rem;
-   justify-content: center;
-   align-items: flex-start;
-}
-
-.services .box-container .box {
-   background-color: var(--white);
-   box-shadow: var(--box-shodow);
-   padding: 2rem;
-   text-align: center;
-}
-
-.services .box-container .box img {
-   margin: 1rem 0;
-   height: 8rem;
-}
-
-.services .box-container .box h3 {
-   font-size: 2rem;
-   padding: 1rem 0;
-   color: var(--main-color);
-   text-transform: capitalize;
-}
-
-.services .box-container .box p {
-   line-height: 2;
-   font-size: 1.6rem;
-   color: var(--light-color);
-   padding-top: .5rem;
-}
+/**** Listing page ****/
 
 .listings .box-container {
    display: grid;
@@ -377,6 +347,8 @@ section {
    color: var(--main-color);
 }
 
+/**** View Property ****/
+
 .view-property .details {
    background-color: var(--white);
    box-shadow: var(--box-shodow);
@@ -500,117 +472,7 @@ section {
    line-height: 1.5;
 }
 
-.about .row {
-   display: flex;
-   flex-wrap: wrap;
-   gap: 1.5rem;
-   align-items: center;
-}
-
-.about .row .image {
-   flex: 1 1 40rem;
-}
-
-.about .row .image img {
-   width: 100%;
-}
-
-.about .row .content {
-   flex: 1 1 40rem;
-   text-align: center;
-}
-
-.about .row .content h3 {
-   font-size: 2.5rem;
-   color: var(--main-color);
-   margin-bottom: .5rem;
-   text-transform: capitalize;
-}
-
-.about .row .content p {
-   line-height: 2;
-   padding: 1rem 0;
-   font-size: 1.7rem;
-   color: var(--light-color);
-}
-
-.steps .box-container {
-   display: grid;
-   grid-template-columns: repeat(auto-fit, 30rem);
-   gap: 2rem;
-   justify-content: center;
-   align-items: flex-start;
-}
-
-.steps .box-container .box {
-   background-color: var(--white);
-   padding: 2rem;
-   text-align: center;
-   box-shadow: var(--box-shodow);
-}
-
-.steps .box-container .box img {
-   height: 7rem;
-   margin: .5rem 0;
-}
-
-.steps .box-container .box h3 {
-   padding: 1rem 0;
-   font-size: 2rem;
-   text-transform: capitalize;
-   color: var(--main-color);
-}
-
-.steps .box-container .box p {
-   line-height: 2;
-   font-size: 1.6rem;
-   color: var(--light-color);
-}
-
-.reviews .box-container {
-   display: grid;
-   grid-template-columns: repeat(auto-fit, 35rem);
-   gap: 2rem;
-   justify-content: center;
-   align-items: flex-start;
-}
-
-.reviews .box-container .box {
-   background-color: var(--white);
-   padding: 2rem;
-   box-shadow: var(--box-shodow);
-}
-
-.reviews .box-container .box .user {
-   display: flex;
-   align-items: center;
-   gap: 1.5rem;
-   margin-bottom: 1rem;
-}
-
-.reviews .box-container .box .user img {
-   height: 6rem;
-   width: 6rem;
-   border-radius: 50%;
-}
-
-.reviews .box-container .box .user h3 {
-   font-size: 2rem;
-   color: var(--main-color);
-   padding-bottom: .3rem;
-}
-
-.reviews .box-container .box .user .stars i {
-   font-size: 1.5rem;
-   color: var(--main-color);
-}
-
-.reviews .box-container .box p {
-   line-height: 2;
-   padding-top: .5rem;
-   font-size: 1.6rem;
-   color: var(--light-color);
-}
+/****** contact-sectiobn ******/
 
 .contact .row {
    display: flex;
@@ -697,6 +559,8 @@ section {
 .faq .box-container .box.active h3 {
    background-color: var(--main-color);
 }
+
+/**** search page ****/
 
 .filters form {
    background-color: var(--white);
